# cook-with-rust

./: .gitmodules  Cargo.toml  CookLang.pest  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: main.rs
cook-markdown/: Cargo.toml
cook-markdown/src/: lib.rs
parser/: Cargo.toml  CookLang.pest  README.md
parser/src/: lib.rs
src/: lib.rs
