[package]
name = "crab-soup-cli"
version = "0.0.1"
edition = "2018"
license = "MIT"
description = "CLI for handling CookLang files in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cook-with-rust-parser = {path = "../parser", version = "0.0.5"}
cook-markdown = {path = "../cook-markdown", version = "0.0.2"}
structopt = "0.3.25"
serde_json = "1"