[package]
name = "cook-markdown"
version = "0.0.1"
license = "MIT"
edition = "2018"
description = "A CookLang to Markdown transpiling library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cook-with-rust-parser = {path = "../parser" }