[package]
name = "cook-with-rust-parser"
version = "0.0.4"
edition = "2018"
license = "MIT"
description = "A parser written in Rust for CookLang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = {version = "1", features = ["derive"]}
uuid = {version = "0.8.2", features = ["v4", "serde"]}
